# MNIST-Libtorch-CNN

./: CMakeLists.txt  README.md  main.cpp
save_model/: MNIST_CNN.pt
src/cpp/: model.cpp
src/include/: model.h
